--- a/src/pages/MasterSignUp/MasterSignUp.module.scss
+++ b/src/pages/MasterSignUp/MasterSignUp.module.scss
@@ -18,6 +18,11 @@ p {
   font-size: 1rem;
 }
 
+// 미디어 쿼리 3단 변화
+// 0 - 고정 크기
+// 1 - 1000px, flex 변화, 중앙 정렬
+// 2 - 700px 이하 , 1줄 컬럼 적용
+
 .imageHeader {
   padding: 10rem 0;
   background-image: url('../../../public/images/georgia-de-lotz--UsJoNxLaNo-unsplash.jpg');
@@ -44,6 +49,7 @@ p {
   .caption {
     font-weight: lighter;
     margin: 1.25rem 0;
+    padding: 0 1.25rem;
   }
 
   .caption {
@@ -58,7 +64,7 @@ p {
 }
 
 .statics {
-  margin-bottom: 1rem;
+  margin: 1.5rem 0;
   font-size: 3.125rem;
   color: #00c7ae;
 }
@@ -82,15 +88,35 @@ p {
   justify-content: space-evenly;
   text-align: center;
 }
+.infoImg {
+  width: 50%;
+  height: 50%;
+}
 
 .infoCaption {
   width: 20rem;
   margin: 1rem;
   padding: 1rem;
   font-size: small;
+  word-break: keep-all;
 }
 
 .infoStageH4 {
   font-size: 1.25rem;
   margin: 1.25rem 0;
+  white-space: nowrap;
 }
+
+.statisticWrapper,
+.infoStage {
+  @media (max-width: 870px) {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+// .infoCaption p {
+//   @media (max-width: 900px) {
+//     width: 10rem;
+//   }
+// }
