[ADD] 고수 회원가입 페이지 footer bar 컴포넌트  추가

--- a/src/pages/master-signup/MasterSignUpNext.module.scss
+++ b/src/pages/master-signup/MasterSignUpNext.module.scss
@@ -14,6 +14,7 @@
 .section {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   background: #fafafa;
   padding: 5rem 0;
 }
