[ADD] 고수 가입 상세페이지 2

--- a/src/pages/master-signup/MasterSignUpNext.module.scss
+++ b/src/pages/master-signup/MasterSignUpNext.module.scss
@@ -1,6 +1,7 @@
+@import '/src/styles/common.scss';
+
 //Question
 .questionBox {
-  position: relative;
   width: 100%;
   min-height: 1.5rem;
   color: rgb(77, 77, 77);
@@ -10,15 +11,37 @@
 
 .question {
   display: none;
-  padding: 0.625rem 0;
-  //padding-right: 5rem;
+  // padding: 0.625rem 0;
+  // //padding-right: 5rem;
+  // position: relative;
+
+  // font-size: 1rem;
+  // text-indent: 2.25rem;
+
+  // cursor: pointer;
+  // font-weight: 500;
+}
+
+.question + label {
+  display: inline-block;
+  margin-right: 0.5rem;
+  width: 1.2rem;
+  height: 1.2rem;
+  vertical-align: sub;
+  background: #e1e1e1;
   position: relative;
-
-  font-size: 1rem;
-  text-indent: 2.25rem;
-
   cursor: pointer;
-  font-weight: 500;
+}
+
+.question:checked + label {
+  background: $sign-color;
+}
+
+.checkInner {
+  color: white;
+  position: absolute;
+  left: 0.2rem;
+  top: 0rem;
 }
 
 // MasterSignUpNext main
