--- a/src/pages/login/Login.module.scss
+++ b/src/pages/login/Login.module.scss
@@ -1,27 +1,38 @@
-.text {
-  text-align: center;
-  margin: 30px 10px;
-  font-size: 35px;
-  margin-top: 100px;
-  border: 1px solid black;
+@media (max-width: 760px) {
+  .loginText {
+    // border: 1px solid black;
+    margin: 30px 10px;
+    margin-top: 50px;
+    font-size: 20px;
+    text-align: left;
+    padding-left: 10px;
+  }
 }
+@media (min-width: 761px) {
+  .loginText {
+    // border: 1px solid black;
+    margin: 30px 10px;
+    margin-top: 100px;
+    font-size: 35px;
+    text-align: center;
+  }
+}
+
 .section {
-  border: 1px solid black;
+  // border: 1px solid black;
   border-radius: 5px;
   width: 400px;
-  height: 500px;
   margin: auto;
   padding: 20px 10px;
   text-align: center;
 }
-
-.id1,
-.pw1 {
+.id,
+.pw {
+  border: 1px solid rgb(165, 161, 161);
+  border-radius: 4px;
   width: 325px;
   height: 45px;
   padding-left: 15px;
-  border: 1px solid rgb(165, 161, 161);
-  border-radius: 4px;
   margin: 10px 5px;
 }
 .email,
@@ -45,17 +56,17 @@
 .Kakaobtn,
 .facebookbtn {
   display: inline-block;
+  border-radius: 4px;
   width: 340px;
   height: 45px;
   margin: auto;
   margin-top: 15px;
   font-size: 15px;
   font-weight: bold;
-  border-radius: 4px;
 }
 .loginbtn {
   color: white;
-  background-color: #03c7ae;
+  background-color: #00c7ae;
   border: white;
 }
 .Kakaobtn {
@@ -67,6 +78,7 @@
   color: white;
   background-color: #1876f1;
   border: white;
+  display: none;
 }
 .gotosignup {
   display: block;
