[FIX] 반응형 레이아웃 수정  - 빠뜨린 헤더 배경 색상 설정

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -2,7 +2,9 @@
   position: fixed;
   top: 0;
   width: 100%;
+  background-color: white;
   border-bottom: 1px solid rgb(233, 233, 233);
+  overflow: hidden;
 }
 
 .header {
