[FIX] 일부 글씨 크기 조정  - 리스트로 나열한 footerLink 글씨 크기 작게 수정

--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -97,13 +97,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: large;
+    font-size: medium;
   }
 
   .footerLink li {
     display: flex;
     flex-direction: column;
-    margin-bottom: 4px;
+    margin-bottom: 10px;
   }
 
   .explanation {
