--- a/src/components/thema_category/ThemaCategory.module.scss
+++ b/src/components/thema_category/ThemaCategory.module.scss
@@ -15,6 +15,7 @@
 }
 .business {
   width: 80%;
+  opacity: 0.2;
 }
 .business:hover {
   background-color: #fafafa;
@@ -23,6 +24,7 @@
 }
 .etc {
   width: 80%;
+  opacity: 0.2;
 }
 .etc:hover {
   background-color: #fafafa;
@@ -31,6 +33,7 @@
 }
 .event {
   width: 80%;
+  opacity: 0.2;
 }
 .event:hover {
   background-color: #fafafa;
@@ -39,6 +42,7 @@
 }
 .health {
   width: 80%;
+  opacity: 0.2;
 }
 .health:hover {
   background-color: #fafafa;
@@ -47,6 +51,7 @@
 }
 .home {
   width: 80%;
+  opacity: 0.2;
 }
 .home:hover {
   background-color: #fafafa;
@@ -55,6 +60,7 @@
 }
 .partTime {
   width: 80%;
+  opacity: 0.2;
 }
 .partTime:hover {
   background-color: #fafafa;
