--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
+$sign-color: #03c7ae; //시그니처 컬러 변수지정해서 사용하면 됩니다.
 
 * {
   box-sizing: border-box;
