--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -90,8 +90,18 @@
   position: absolute;
 }
 
+.profileImg {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
 .searchBtn {
   position: absolute;
+}
+
+.grayColor {
+  color: gray;
 }
 
 .hidden {
