Add:section 내부 정렬

--- a/src/pages/login/Login.module.scss
+++ b/src/pages/login/Login.module.scss
@@ -17,9 +17,10 @@
     text-align: center;
   }
 }
-
+.page {
+  background-color: #fafafa;
+}
 .section {
-  border: 1px solid black;
   border-radius: 5px;
   width: 400px;
   margin: auto;
@@ -28,9 +29,11 @@
 }
 .id,
 .pw {
-  border: 1px solid rgb(165, 161, 161);
+  border: 1px solid rgb(190, 188, 188);
   border-radius: 4px;
-  width: 325px;
+  font-weight: 500;
+  font-size: 15px;
+  width: 335px;
   height: 45px;
   padding-left: 15px;
   margin: 10px 5px;
@@ -61,8 +64,8 @@
 .password {
   text-align: left;
   font-size: 15px;
-  font-weight: bold;
-  margin-left: 30px;
+  font-weight: 500;
+  margin-left: 22px;
   margin-top: 20px;
 }
 .findPw {
@@ -70,7 +73,7 @@
   text-align: left;
   margin-top: 9px;
   margin-bottom: 20px;
-  padding-left: 30px;
+  padding-left: 22px;
   font-size: 15px;
   color: rgb(85, 78, 78);
 }
@@ -79,7 +82,7 @@
 .facebookBtn {
   display: inline-block;
   border-radius: 4px;
-  width: 330px;
+  width: 340px;
   height: 45px;
   margin: auto;
   margin-top: 15px;
@@ -105,6 +108,7 @@
 .goToSignUp {
   display: block;
   margin-top: 20px;
+  padding-right: 10px;
   text-decoration: none;
   color: rgb(85, 78, 78);
 }
