--- a/src/components/master-signup/FormInfo.module.scss
+++ b/src/components/master-signup/FormInfo.module.scss
@@ -19,9 +19,9 @@
 
 .gender {
   display: flex;
-  justify-content: space-around;
-  margin: 0.5rem 0;
-  padding: 0.75rem 0 0.75rem 0.5rem;
+  justify-content: space-between;
+  //margin: 0.5rem 0;
+  //padding: 0.75rem 0 0.75rem 0.5rem;
 }
 
 .genderRadio {
@@ -31,12 +31,13 @@
 .genderBtnWrapper {
   width: 100%;
   text-align: center;
-  padding: 0.3125rem;
-  flex-basis: 50%;
+  //padding: 0.3125rem;
+  //flex-basis: 50%;
 }
 
 .genderRadio + label {
   display: block;
+  width: 99%;
   padding: 1rem;
   border: 0.0625rem solid #e1e1e1;
   border-radius: 0.25rem;
