--- a/src/components/master/MasterItem.module.scss
+++ b/src/components/master/MasterItem.module.scss
@@ -5,6 +5,8 @@
   padding-bottom: 1.5rem;
   border-bottom: 1px solid #dddddd57;
   cursor: pointer;
+  line-height: normal;
+
   .imageWrapper {
     overflow: hidden;
     border-radius: 20px;
@@ -18,6 +20,8 @@
     flex-direction: column;
     padding-left: 1.5rem;
     flex: 1;
+    font-size: 13px;
+
     .masterInfoName {
       font-size: 16px;
       font-weight: bold;
@@ -32,7 +36,6 @@
       span:nth-child(2) {
         padding-left: 2px;
         font-weight: 400;
-        font-size: 12px;
       }
     }
     .masterInfoRecentReview {
@@ -41,12 +44,10 @@
       span:nth-child(2) {
         padding-left: 2px;
         font-weight: 600;
-        font-size: 13px;
       }
       span:nth-child(3) {
         padding-left: 6px;
         color: #666;
-        font-size: 13px;
       }
     }
   }
