--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -5,6 +5,7 @@
   background-color: white;
   border-bottom: 1px solid rgb(233, 233, 233);
   overflow: hidden;
+  z-index: 1;
 }
 
 .header {
@@ -93,6 +94,7 @@
 .profileImg {
   width: 40px;
   height: 40px;
+  margin-right: 6px;
   border-radius: 50%;
 }
 
@@ -102,6 +104,37 @@
 
 .grayColor {
   color: gray;
+}
+
+.redDot {
+  position: relative;
+  top: -8px;
+  width: 6px;
+  height: 6px;
+  background-color: #ff3131;
+  border-radius: 50%;
+}
+
+.chatNum {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 22px;
+  height: 16px;
+  color: white;
+  background-color: #fa5963;
+  border-radius: 12px;
+  font-size: x-small;
+  text-align: center;
+}
+
+.bell {
+  margin-left: 16px;
+}
+
+.flexRow {
+  display: flex;
+  align-items: center;
 }
 
 .hidden {
