--- a/src/components/thema_category/ThemaCategory.module.scss
+++ b/src/components/thema_category/ThemaCategory.module.scss
@@ -2,11 +2,11 @@
   width: 1000px;
   margin: 0px auto;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   margin-top: 3%;
 }
 .lesson {
-  width: 80%;
+  width: 100px;
 }
 .lesson:hover {
   background-color: #fafafa;
@@ -14,7 +14,7 @@
   transition: all 0.4s;
 }
 .business {
-  width: 80%;
+  width: 100px;
   opacity: 0.2;
 }
 .business:hover {
@@ -23,7 +23,7 @@
   transition: all 0.4s;
 }
 .etc {
-  width: 80%;
+  width: 100px;
   opacity: 0.2;
 }
 .etc:hover {
@@ -32,7 +32,7 @@
   transition: all 0.4s;
 }
 .event {
-  width: 80%;
+  width: 100px;
   opacity: 0.2;
 }
 .event:hover {
@@ -41,7 +41,7 @@
   transition: all 0.4s;
 }
 .health {
-  width: 80%;
+  width: 100px;
   opacity: 0.2;
 }
 .health:hover {
@@ -50,7 +50,7 @@
   transition: all 0.4s;
 }
 .home {
-  width: 80%;
+  width: 100px;
   opacity: 0.2;
 }
 .home:hover {
@@ -59,7 +59,7 @@
   transition: all 0.4s;
 }
 .partTime {
-  width: 80%;
+  width: 100px;
   opacity: 0.2;
 }
 .partTime:hover {
@@ -68,10 +68,66 @@
   transition: all 0.4s;
 }
 .design {
-  width: 80%;
+  width: 100px;
 }
 .design:hover {
   background-color: #fafafa;
   transform: translateY(-0.1in);
   transition: all 0.4s;
+}
+
+@media (max-width: 760px) {
+  .container {
+    width: 100%;
+    margin: 0px auto;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 3%;
+    flex-wrap: wrap;
+  }
+}
+
+@media (min-width: 761px) and (max-width: 990px) {
+  .container {
+    width: 100%;
+    margin: 0px auto;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 3%;
+    flex-wrap: wrap;
+  }
+
+  .lesson {
+    width: 80px;
+  }
+  .business {
+    width: 80px;
+    opacity: 0.2;
+  }
+  .etc {
+    width: 80px;
+    opacity: 0.2;
+  }
+  .event {
+    width: 80px;
+    opacity: 0.2;
+  }
+  .health {
+    width: 80px;
+    opacity: 0.2;
+  }
+  .home {
+    width: 80px;
+    opacity: 0.2;
+  }
+  .partTime {
+    width: 80px;
+    opacity: 0.2;
+  }
+  .design {
+    width: 80px;
+  }
+}
+
+@media (min-width: 991px) {
 }
