--- a/src/components/master/MasterItem.module.scss
+++ b/src/components/master/MasterItem.module.scss
@@ -5,7 +5,7 @@
   padding-bottom: 1.5rem;
   border-bottom: 1px solid #dddddd57;
   cursor: pointer;
-  line-height: normal;
+  line-height: 1.7;
 
   .imageWrapper {
     overflow: hidden;
@@ -24,14 +24,14 @@
 
     .masterInfoName {
       font-size: 16px;
-      font-weight: bold;
+      font-weight: 600;
     }
     .masterInfoIntro {
       color: #747474;
     }
     .masterInfoReview {
       span:nth-child(1) {
-        font-weight: 800;
+        font-weight: 600;
       }
       span:nth-child(2) {
         padding-left: 2px;
@@ -43,7 +43,7 @@
       align-items: center;
       span:nth-child(2) {
         padding-left: 2px;
-        font-weight: 600;
+        font-weight: 500;
       }
       span:nth-child(3) {
         padding-left: 6px;
