--- a/src/components/modal/FilteringModal.module.scss
+++ b/src/components/modal/FilteringModal.module.scss
@@ -1,3 +1,13 @@
+@keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    transform: translate3d(0, -20%, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translateZ(0);
+  }
+}
 @media (max-width: 990px) {
   .modalMain {
     padding-top: 0px !important;
@@ -23,6 +33,8 @@
   background-color: rgba(0, 0, 0, 0.4);
 
   .modalWrapper {
+    position: relative;
+    animation: fadeInDown 0.6s;
     display: flex;
     flex-direction: column;
     background-color: #fefefe;
@@ -31,7 +43,7 @@
     border: 1px solid #888;
     width: 360px;
     .modalCloseBtn {
-      padding-bottom: 1.5rem;
+      padding-bottom: 1rem;
       text-align: end;
     }
     .modalHeader {
