--- a/src/components/modal/FilteringModal.module.scss
+++ b/src/components/modal/FilteringModal.module.scss
@@ -31,6 +31,7 @@
   overflow: auto;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
+  line-height: 1.7;
 
   .modalWrapper {
     position: relative;
@@ -43,13 +44,12 @@
     border: 1px solid #888;
     width: 360px;
     .modalCloseBtn {
-      padding-bottom: 1rem;
       text-align: end;
     }
     .modalHeader {
       display: flex;
       padding-bottom: 1rem;
-
+      align-items: center;
       h4 {
         padding-left: 4px;
       }
@@ -58,7 +58,7 @@
       .modalSearch {
         display: flex;
         padding: 10px;
-        margin-bottom: 1.5rem;
+        margin-bottom: 1rem;
         align-items: center;
         border-radius: 6px;
         background-color: #eeeeee;
@@ -92,6 +92,7 @@
         ul li details summary {
           display: flex;
           justify-content: space-between;
+          align-items: center;
           padding: 12px 6px;
           border-bottom: 1px solid #eeeeee;
           cursor: pointer;
