[FIX] 고수 상세 페이지 UI 완료, data get 기능 구현 완료. *특이사항 - Header의 z-index 수정

--- a/src/components/master-detail/MasterInfo.module.scss
+++ b/src/components/master-detail/MasterInfo.module.scss
@@ -1,3 +1,22 @@
 .masterInfoContainer {
   display: flex;
+
+  .infoBox:first-child {
+    width: 60%;
+  }
+  .infoBox:last-child {
+    width: 40%;
+  }
+  .infoBox {
+    white-space: nowrap;
+
+    span {
+      display: inline-block;
+      margin-bottom: 0.75rem;
+      margin-left: 1rem;
+    }
+  }
+  @media (max-width: 760px) {
+    flex-direction: column;
+  }
 }
