--- a/src/pages/master-detail/MasterDetail.module.scss
+++ b/src/pages/master-detail/MasterDetail.module.scss
@@ -1,17 +1,33 @@
 .container {
   display: flex;
-  justify-content: space-evenly;
-  border: 1px solid red;
+  flex-wrap: wrap;
   margin: 0 auto;
+  padding: 0 6.25rem;
+  line-height: 1.5;
 }
 
 .masterProfile {
   position: relative;
 }
+
 .pageNav {
+  display: block;
   position: sticky;
-  top: 4.5rem;
+  top: 5.5rem;
+  background-color: #fff;
   z-index: 2;
+  margin: 0;
+}
+
+.requestContainer {
+  padding-left: 2.5rem;
+  max-width: 20rem;
+  flex: 1 1 auto;
+}
+
+.detailContainer {
+  max-width: 40.625rem;
+  flex: 1 1 auto;
 }
 
 .detailContainer,
@@ -20,7 +36,6 @@
 .lessonCategory,
 .masterImages,
 .masterReview {
-  //width: 100%;
   padding: 1.5625rem 0;
   font-size: 1rem;
   h2 {
@@ -37,4 +52,34 @@
   color: #737373;
   margin: 0;
   font-size: 1rem;
+}
+
+.masterIntro {
+  white-space: normal;
+}
+
+.masterIntro,
+.masterImages,
+.masterReview {
+  scroll-margin-top: 7rem;
+  // header, navbar height 변수로 가져오기
+}
+
+.container {
+  @media (max-width: 760px) {
+    flex-direction: column;
+    padding: 0;
+    .detailContainer {
+      max-width: 100%;
+      padding: 0 1rem;
+    }
+    .pageNav {
+      top: 3.5rem;
+    }
+  }
+  @media (min-width: 761px) and (max-width: 990px) {
+    .pageNav {
+      top: 3.5rem;
+    }
+  }
 }
