--- a/src/components/master-detail/MasterDetailNav.module.scss
+++ b/src/components/master-detail/MasterDetailNav.module.scss
@@ -1,10 +1,8 @@
 .container {
-  background-color: #fff;
   margin: 0;
   border-bottom: 0.0625rem solid #f2f2f2;
   display: block;
-  line-height: 1.5;
-
+  background: #fff;
   li:nth-child(1n + 2) {
     margin-left: 1.25rem;
   }
@@ -27,8 +25,5 @@
       color: #323232;
       font-weight: 700;
     }
-  }
-  li.active {
-    color: red;
   }
 }
