--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -3,6 +3,10 @@
   flex-direction: column;
   margin: 0 auto;
   background-color: white;
+}
+
+.footerLine {
+  margin-bottom: 30px;
   border-top: 1px solid lightgray;
 }
 
@@ -15,31 +19,48 @@
 }
 
 .contacts {
-  padding: 20px;
   color: gray;
-  font-size: small;
+  font-size: 0.9rem;
   line-height: 180%;
 }
 
 .gen {
-  padding-bottom: 10px;
+  padding-bottom: 6px;
   color: #03c7ae;
-  font-size: x-large;
+  font-size: 1.35rem;
   font-weight: 500;
 }
 
 .footerLink {
   display: flex;
   justify-content: space-evenly;
-  padding: 20px;
   background-color: white;
   color: gray;
-  font-size: small;
+  font-size: 0.9rem;
 }
 
 .footerLink li {
   padding: 6px 20px;
   list-style: none;
+}
+
+.stores {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0;
+}
+
+.storeBtn {
+  width: 140px;
+  height: 34px;
+  padding: 4px;
+  border: 0px solid white;
+  border-radius: 30px;
+  color: white;
+  background-color: #03c7ae;
+  font-size: 0.8rem;
+  font-weight: 500;
+  text-align: center;
 }
 
 .footerTitle {
@@ -48,16 +69,17 @@
 }
 
 .explanation {
-  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto 40px auto;
   width: 1000px;
-  padding: 20px;
   color: gray;
 }
 
 .documents {
   display: flex;
-  margin-bottom: 10px;
-  font-size: small;
+  margin: 10px 0;
+  font-size: 0.7rem;
   font-weight: 600;
 }
 
@@ -65,12 +87,23 @@
   margin-right: 20px;
 }
 
+.icons {
+  display: flex;
+  align-items: flex-end;
+}
+
+.icon {
+  margin: 5px;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
 .clickable {
   cursor: pointer;
 }
 
 .copyright {
-  font-size: small;
+  font-size: 0.75rem;
   line-height: 150%;
 }
 
@@ -78,7 +111,7 @@
   display: hidden;
 }
 
-@media screen and (max-width: 990px) {
+@media screen and (max-width: 761px) {
   .footer {
     width: 100vw;
     margin: 0 auto;
@@ -106,6 +139,13 @@
     margin-bottom: 10px;
   }
 
+  .hiddenLine {
+    display: block;
+    margin: 20px;
+    width: 90vw;
+    border-bottom: 1px solid lightgray;
+  }
+
   .explanation {
     display: flex;
     flex-direction: column;
@@ -114,10 +154,11 @@
     text-align: center;
   }
 
-  .hiddenLine {
-    display: block;
-    margin: 20px;
-    width: 90vw;
-    border-bottom: 1px solid lightgray;
+  .documents {
+    justify-content: center;
+  }
+
+  .icons {
+    margin: 10px;
   }
 }
