--- a/src/pages/slide/Banner.module.scss
+++ b/src/pages/slide/Banner.module.scss
@@ -32,7 +32,7 @@ a {
 .carouselComponent {
   width: 1000px;
   margin: 0px auto;
-  margin-top: 3%;
+  margin-top: 90px;
 }
 .carouselWrap {
   align-items: center;
