[FIX] 고수 상세 정보 api 수정

--- a/src/components/master-detail/MasterRequest.module.scss
+++ b/src/components/master-detail/MasterRequest.module.scss
@@ -36,7 +36,7 @@
     font-weight: 700;
     text-align: center;
     color: #fff;
-    background: $sign-color;
+    background: #03c7ae;
     cursor: pointer;
   }
 }
