--- a/src/components/step/ThemaCategoryStep.module.scss
+++ b/src/components/step/ThemaCategoryStep.module.scss
@@ -1,9 +1,10 @@
-body {
+/*body {
   background-color: #fafafa;
-}
+}*/
 
 .root_container {
   text-align: center;
+  background-color: #fafafa;
 }
 .box {
   background-color: white;
