--- a/src/pages/main_category_report/MainCategoryReport.module.scss
+++ b/src/pages/main_category_report/MainCategoryReport.module.scss
@@ -4,6 +4,35 @@ body {
 
 .root_container {
   text-align: center;
+  position: relative;
+  margin-bottom: 5%;
+}
+.container {
+  width: 1000px;
+  margin: 0px auto;
+  //position: absolute;
+  //top: 130%;
+  //left: 50%;
+  //transform: translate(-50%, -50%);
+
+  h2 {
+    font-size: 2.5em;
+    font-weight: 500;
+    color: white;
+  }
+}
+.wrap {
+  display: flex;
+}
+.text_wrap {
+  width: 100%;
+  //margin-top: 300px;
+}
+.banner {
+  margin-top: 90px;
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
 }
 .box {
   background-color: white;
