[FIX] 구현하지 않는 부분은 반투명하게 처리  - 고객센터 ,링크없는 아이콘 등 opacity: 50%로 바꿈

--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -111,6 +111,10 @@
   display: hidden;
 }
 
+.disabled {
+  opacity: 50%;
+}
+
 @media screen and (max-width: 761px) {
   .footer {
     width: 100vw;
