[UPDATE/FIX]반응형 웹 구현 및 bug fix

--- a/src/pages/main_category_report/MainCategoryReport.module.scss
+++ b/src/pages/main_category_report/MainCategoryReport.module.scss
@@ -1,35 +1,64 @@
 .root_container {
   text-align: center;
-  position: relative;
-  margin-bottom: 5%;
   background-color: #fafafa;
+  position: relative;
+  margin-bottom: 30%;
 }
 .container {
   width: 1000px;
   margin: 0px auto;
-  //position: absolute;
-  //top: 130%;
-  //left: 50%;
-  //transform: translate(-50%, -50%);
+  position: absolute;
+  top: 120%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
   h2 {
     font-size: 2.5em;
     font-weight: 500;
     color: white;
+    text-align: left;
   }
+  h4 {
+    text-align: left;
+    color: white;
+    margin: 10px;
+    margin-bottom: 20px;
+  }
+}
+.calc_num {
+  display: flex;
+}
+.star_list {
+  text-align: left;
+  margin: 20px 20px 20px 0px;
 }
 .wrap {
   display: flex;
+  //border: 1px solid red;
 }
 .text_wrap {
   width: 100%;
-  //margin-top: 300px;
+  margin-top: 10%;
+  margin-left: 50px;
+  text-align: left;
+  p {
+    font-size: 0.9em;
+    font-weight: 100;
+  }
+  strong {
+    font-weight: 900;
+  }
+}
+.strong_div {
+  margin-bottom: 5px;
+  margin-top: 30px;
 }
 .banner {
-  margin-top: 90px;
+  margin-top: 60px;
   width: 100%;
   height: 300px;
   object-fit: cover;
+  filter: brightness(50%);
 }
 .box {
   background-color: white;
@@ -171,6 +200,7 @@
   font-weight: 100;
 }
 .text_line {
+  margin-top: 20px;
   border-radius: 10%;
   background-color: #f2f2f2;
   padding: 20px;
@@ -182,4 +212,67 @@
   width: 100%;
   object-fit: cover;
   //position: relative;
+}
+
+@media (max-width: 760px) {
+  .root_container {
+    height: 1000px;
+    text-align: center;
+    position: relative;
+    background-color: #fafafa;
+  }
+  .container {
+    //width: 1000px;
+    width: 100%;
+    margin: 0px auto;
+    margin-top: 300px;
+    top: 30%;
+    margin-bottom: 0px;
+  }
+  .wrap {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    margin: 0px auto;
+    margin-bottom: 0px;
+  }
+  .text_wrap {
+    width: 100%;
+    margin-top: 10%;
+    margin-left: 0px;
+    text-align: left;
+  }
+}
+
+@media (min-width: 761px) and (max-width: 990px) {
+  .root_container {
+    height: 1400px;
+    text-align: center;
+    position: relative;
+    background-color: #fafafa;
+    margin: 0px;
+  }
+  .container {
+    //width: 1000px;
+    width: 100%;
+    margin: 0px auto;
+    margin-top: 300px;
+    top: 30%;
+    margin-bottom: 0px;
+  }
+  .wrap {
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    margin: 0px auto;
+    margin-bottom: 0px;
+  }
+  .text_wrap {
+    width: 100%;
+    margin-top: 10%;
+    margin-left: 0px;
+    text-align: left;
+  }
+}
+@media (min-width: 991px) {
 }
