--- a/src/components/step/ThemaCategoryForm.module.scss
+++ b/src/components/step/ThemaCategoryForm.module.scss
@@ -1,8 +1,5 @@
-body {
-  background-color: #fafafa;
-}
-
 .root_container {
+  background-color: #fafafa;
   text-align: center;
 }
 .box {
@@ -13,7 +10,6 @@ body {
   box-shadow: 1px 1px 2px 1px lightgray;
   border-radius: 1%;
   padding: 30px;
-  margin-top: 100px;
 }
 .progress_wrap {
   padding: 10px;
@@ -156,4 +152,22 @@ body {
   width: 100%;
   object-fit: cover;
   //position: relative;
+}
+
+@media (max-width: 760px) {
+  .box {
+    background-color: white;
+    width: 90%;
+    //height: 600px;
+    margin: 0px auto;
+    box-shadow: 1px 1px 2px 1px lightgray;
+    border-radius: 1%;
+    padding: 30px;
+  }
+}
+
+@media (min-width: 761px) and (max-width: 990px) {
+}
+
+@media (min-width: 991px) {
 }
