--- a/src/components/step/ThemaCategoryForm.module.scss
+++ b/src/components/step/ThemaCategoryForm.module.scss
@@ -3,6 +3,7 @@
   text-align: center;
 }
 .box {
+  position: fixed;
   background-color: white;
   width: 500px;
   //height: 600px;
@@ -156,8 +157,9 @@
 
 @media (max-width: 760px) {
   .box {
+    position: static;
     background-color: white;
-    width: 90%;
+    width: 100%;
     //height: 600px;
     margin: 0px auto;
     box-shadow: 1px 1px 2px 1px lightgray;
@@ -167,6 +169,42 @@
 }
 
 @media (min-width: 761px) and (max-width: 990px) {
+  .box {
+    position: static;
+    background-color: white;
+    width: 100%;
+    //height: 600px;
+    margin: 0px auto;
+    box-shadow: 1px 1px 2px 1px lightgray;
+    border-radius: 1%;
+    padding: 30px;
+  }
+  .btn_div {
+    width: 100%;
+    display: flex;
+    justify-content: right;
+    //justify-content: space-between;
+    //justify-content: flex-end;
+  }
+  .btn_right {
+    color: white;
+    border: 0px;
+    border-radius: 10%;
+    font-size: 1.2rem;
+    width: 120px;
+    padding: 15px;
+    background-color: #02bcc3;
+  }
+  .btn_left {
+    color: #02bcc3;
+    border-radius: 10%;
+    font-size: 1.2rem;
+    width: 120px;
+    padding: 15px;
+    border: 1px solid #e1e1e1;
+    background-color: white;
+    margin-right: 20px;
+  }
 }
 
 @media (min-width: 991px) {
