--- a/src/pages/main_category_report/MainCategoryReport.module.scss
+++ b/src/pages/main_category_report/MainCategoryReport.module.scss
@@ -36,10 +36,11 @@
   display: flex;
   //border: 1px solid red;
 }
-.text_wrap {
+.text_container {
   width: 100%;
-  margin-top: 10%;
-  margin-left: 50px;
+  height: 300px;
+  margin-top: 100px;
+  margin-left: 550px;
   text-align: left;
   p {
     font-size: 0.9em;
@@ -200,6 +201,7 @@
   font-weight: 100;
 }
 .text_line {
+  width: 100%;
   margin-top: 20px;
   border-radius: 10%;
   background-color: #f2f2f2;
@@ -223,14 +225,14 @@
   }
   .container {
     //width: 1000px;
-    width: 100%;
+    width: 90%;
     margin: 0px auto;
     margin-top: 300px;
     top: 30%;
     margin-bottom: 0px;
   }
   .wrap {
-    width: 90%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     margin: 0px auto;
@@ -241,27 +243,47 @@
     margin-top: 10%;
     margin-left: 0px;
     text-align: left;
+  }
+  .text_container {
+    width: 100%;
+    height: 300px;
+    margin: 0px auto;
+    text-align: left;
+    p {
+      font-size: 0.9em;
+      font-weight: 100;
+    }
+    strong {
+      font-weight: 900;
+    }
+  }
+  .goso_container {
+    margin: 0px auto;
+    //margin-top: 100px;
+    margin-bottom: 50px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
   }
 }
 
 @media (min-width: 761px) and (max-width: 990px) {
   .root_container {
-    height: 1400px;
+    height: 1000px;
     text-align: center;
     position: relative;
     background-color: #fafafa;
-    margin: 0px;
   }
   .container {
     //width: 1000px;
-    width: 100%;
+    width: 90%;
     margin: 0px auto;
     margin-top: 300px;
     top: 30%;
     margin-bottom: 0px;
   }
   .wrap {
-    width: 500px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     margin: 0px auto;
@@ -272,6 +294,27 @@
     margin-top: 10%;
     margin-left: 0px;
     text-align: left;
+  }
+  .text_container {
+    width: 100%;
+    height: 300px;
+    margin: 0px auto;
+    text-align: left;
+    p {
+      font-size: 0.9em;
+      font-weight: 100;
+    }
+    strong {
+      font-weight: 900;
+    }
+  }
+  .goso_container {
+    margin: 0px auto;
+    //margin-top: 100px;
+    margin-bottom: 50px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
   }
 }
 @media (min-width: 991px) {
