--- a/src/components/thema_category/ThemaCategory.module.scss
+++ b/src/components/thema_category/ThemaCategory.module.scss
@@ -17,56 +17,60 @@
   width: 100px;
   opacity: 0.2;
 }
+/*
 .business:hover {
   background-color: #fafafa;
   transform: translateY(-0.1in);
   transition: all 0.4s;
-}
+}*/
 .etc {
   width: 100px;
   opacity: 0.2;
 }
+/*
 .etc:hover {
   background-color: #fafafa;
   transform: translateY(-0.1in);
   transition: all 0.4s;
-}
+}*/
 .event {
   width: 100px;
   opacity: 0.2;
 }
+/*
 .event:hover {
   background-color: #fafafa;
   transform: translateY(-0.1in);
   transition: all 0.4s;
-}
+}*/
 .health {
   width: 100px;
   opacity: 0.2;
-}
+} /*
 .health:hover {
   background-color: #fafafa;
   transform: translateY(-0.1in);
   transition: all 0.4s;
-}
+}*/
 .home {
   width: 100px;
   opacity: 0.2;
-}
+} /*
 .home:hover {
   background-color: #fafafa;
   transform: translateY(-0.1in);
   transition: all 0.4s;
-}
+}*/
 .partTime {
   width: 100px;
   opacity: 0.2;
 }
+/*
 .partTime:hover {
   background-color: #fafafa;
   transform: translateY(-0.1in);
   transition: all 0.4s;
-}
+}*/
 .design {
   width: 100px;
 }
