[FIX]json 구조변경에 따른 수정

--- a/src/components/step/ThemaCategoryStep.module.scss
+++ b/src/components/step/ThemaCategoryStep.module.scss
@@ -57,7 +57,11 @@
   border: 1px solid #f2f2f2;
 }
 .small_headline {
-  margin-bottom: 15%;
+  color: black;
+  text-align: left;
+  padding: 30px 30px 30px 30px;
+  font-size: 1.3em;
+  font-weight: 700;
 }
 .btn_div {
   width: 100%;
