--- a/src/pages/main_category_report/MainCategoryReport.module.scss
+++ b/src/pages/main_category_report/MainCategoryReport.module.scss
@@ -4,6 +4,47 @@
   position: relative;
   margin-bottom: 30%;
 }
+.headline {
+  color: white;
+  font-size: 2em;
+  position: absolute;
+  top: -200px;
+}
+.button_list {
+  display: flex;
+  margin-top: 70px;
+}
+.green_btn {
+  border-radius: 5%;
+  width: 200px;
+  padding: 15px;
+  justify-content: center;
+  text-align: center;
+  border: 0px;
+  background-color: #03c7ae;
+  color: white;
+  margin-bottom: 20px;
+  margin-right: 20px;
+  font-size: 0.5em;
+  font-weight: bold;
+}
+.green_btn:hover {
+  background-color: #00a18d;
+}
+.white_btn {
+  border-radius: 5%;
+  width: 200px;
+  padding: 15px;
+  justify-content: center;
+  text-align: center;
+  border: 0px;
+  background-color: white;
+  color: black;
+  margin-bottom: 20px;
+  margin-right: 20px;
+  font-size: 0.5em;
+  font-weight: bold;
+}
 .container {
   width: 1000px;
   margin: 0px auto;
@@ -179,6 +220,7 @@
   width: 1000px;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 .goso_wrap {
   padding: 20px;
@@ -225,6 +267,7 @@
   height: 300px;
   width: 100%;
   object-fit: cover;
+  filter: brightness(50%);
   //position: relative;
 }
 
@@ -277,6 +320,17 @@
     display: flex;
     flex-direction: column;
   }
+  .headline {
+    color: white;
+    font-size: 2em;
+    position: absolute;
+    top: -200px;
+    left: 20px;
+  }
+  .button_list {
+    display: flex;
+    margin-top: 70px;
+  }
 }
 
 @media (min-width: 761px) and (max-width: 990px) {
@@ -327,6 +381,17 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+  }
+  .headline {
+    color: white;
+    font-size: 2em;
+    position: absolute;
+    top: -200px;
+    left: 20px;
+  }
+  .button_list {
+    display: flex;
+    margin-top: 70px;
   }
 }
 @media (min-width: 991px) {
