--- a/src/pages/main_category_report/MainCategoryReport.module.scss
+++ b/src/pages/main_category_report/MainCategoryReport.module.scss
@@ -2,7 +2,7 @@
   text-align: center;
   background-color: #fafafa;
   position: relative;
-  margin-bottom: 30%;
+  margin-bottom: 600px;
 }
 .headline {
   color: white;
