--- a/src/components/modal/FilteringModalSearch.module.scss
+++ b/src/components/modal/FilteringModalSearch.module.scss
@@ -1,4 +1,4 @@
-.categoryModalSearchList {
+.modalSearchCategories {
   li {
     display: flex;
     justify-content: space-between;
@@ -14,7 +14,7 @@
     }
   }
 }
-.categoryModalSearchNotDefined {
+.modalSearchNotDefined {
   display: flex;
   flex-direction: column;
   align-items: center;
