--- a/src/components/modal/MasterCategoryModal.module.scss
+++ b/src/components/modal/MasterCategoryModal.module.scss
@@ -1,3 +1,5 @@
+$sign-color: #03c7ae; //시그니처 컬러 변수지정해서 사용하면 됩니다.
+
 @keyframes fadeInDown {
   0% {
     opacity: 0;
@@ -32,30 +34,34 @@
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
   line-height: 1.7;
+  font-size: 15px;
 
   .modalWrapper {
     position: relative;
-    overflow: scroll;
     animation: fadeInDown 0.6s;
     display: flex;
     flex-direction: column;
     background-color: #fefefe;
     margin: auto;
-    padding: 20px;
     border: 1px solid #888;
     width: 360px;
     .modalCloseBtn {
+      padding: 20px;
       text-align: end;
     }
     .modalHeader {
       display: flex;
-      padding-bottom: 1rem;
       align-items: center;
+      padding: 0px 20px 10px;
       h4 {
         padding-left: 4px;
       }
     }
     .modalContent {
+      height: 100%;
+      padding: 0px 20px;
+      overflow: scroll;
+      background-color: #ffff;
       .modalSearch {
         display: flex;
         padding: 10px;
@@ -79,6 +85,9 @@
       .modalList {
         details {
           div {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
             padding: 12px 20px;
             border-bottom: 1px solid #eeeeee;
             cursor: pointer;
@@ -86,7 +95,9 @@
               background-color: #eeeeee;
             }
             span {
-              padding-left: 4px;
+              span {
+                padding-left: 4px;
+              }
             }
           }
         }
@@ -105,6 +116,19 @@
             display: none;
           }
         }
+        .checkedIcon {
+          color: $sign-color !important;
+        }
+      }
+    }
+    .ModalFooterBtn {
+      padding: 15px;
+      background-color: $sign-color;
+      color: #ffff;
+      text-align: center;
+      cursor: pointer;
+      &:hover {
+        background-color: #03c7ad94;
       }
     }
   }
