--- a/src/components/master-detail/MasterInfo.module.scss
+++ b/src/components/master-detail/MasterInfo.module.scss
@@ -16,6 +16,10 @@
       margin-left: 1rem;
     }
   }
+
+  .Off {
+    display: none;
+  }
   @media (max-width: 760px) {
     flex-direction: column;
   }
