--- a/src/pages/master-detail/MasterDetail.module.scss
+++ b/src/pages/master-detail/MasterDetail.module.scss
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   margin: 0 auto;
   padding: 0 6.25rem;
   line-height: 1.5;
