[FIX] 고수 신청서 기능 구현 중

--- a/src/components/master-signup/MasterSignUpFooter.module.scss
+++ b/src/components/master-signup/MasterSignUpFooter.module.scss
@@ -35,17 +35,17 @@
 }
 
 .btnPrev {
-  color: $sign-color;
+  color: #03c7ae;
 }
 
 .btnPrev:hover {
   color: #fff;
-  background: $sign-color;
+  background: #03c7ae;
   opacity: 0.5;
 }
 
 .btnNext {
-  background: $sign-color;
+  background: #03c7ae;
   color: #fff;
 }
 
