ADD: 고수찾기 필터링

--- a/src/components/master/MasterItem.module.scss
+++ b/src/components/master/MasterItem.module.scss
@@ -8,6 +8,7 @@
   line-height: 1.7;
 
   .imageWrapper {
+    height: 110px;
     overflow: hidden;
     border-radius: 20px;
     border: 0.5px solid #dddddda8;
