[ADD] 로그아웃 버튼 추가

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -142,6 +142,10 @@
   display: none;
 }
 
+.disabled {
+  opacity: 50%;
+}
+
 @media screen and (max-width: 761px) {
   .header {
     width: 100vw;
