[FIX]받은견적 고수리스트 api 연결 후 수정사항

--- a/src/pages/main_category_report/MainCategoryReport.module.scss
+++ b/src/pages/main_category_report/MainCategoryReport.module.scss
@@ -243,10 +243,11 @@
 }
 .goso_line {
   display: flex;
+  justify-content: left;
 }
 .recruit_box {
   padding: 3px;
-  margin: 0px auto;
+  //margin: 0px auto;
   font-size: 0.8em;
   background-color: #f2f2f2;
 }
