--- a/src/pages/master/MasterList.module.scss
+++ b/src/pages/master/MasterList.module.scss
@@ -1,12 +1,12 @@
 @media (max-width: 690px) {
-  .masterList {
-    width: 460px;
+  .masterListFooter {
+    display: none;
   }
 }
 
 @media (min-width: 691px) and (max-width: 890px) {
-  .masterList {
-    width: 660px;
+  .masterListFooter {
+    display: none;
   }
 }
 
@@ -17,7 +17,49 @@
 }
 
 .masterList {
-  height: 100vh;
+  min-height: 650px;
   padding-top: 90px;
   margin: 0 auto;
+  .notFoundMaster {
+    display: flex;
+    height: 300px;
+    align-items: center;
+    text-align: center;
+    span {
+      flex: 1;
+      font-weight: 500;
+      font-size: 20px;
+      color: rgba(102, 102, 102, 0.466);
+    }
+  }
+}
+.loading {
+  $sign-color: #03c7ae;
+  $size: 50px !default;
+  $thickness: 6px !default;
+  $base-color: #fff !default;
+  $speed: 800ms !default;
+
+  margin: 5% auto;
+  height: $size;
+  width: $size;
+  border: $thickness solid $base-color;
+  border: {
+    right-color: $sign-color;
+    top-color: $sign-color;
+    radius: 100%;
+  }
+  animation: spin $speed infinite linear;
+
+  @keyframes spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(359deg);
+    }
+  }
+}
+.unloading {
+  display: none;
 }
