--- a/src/pages/main_category_report/MainCategoryReport.module.scss
+++ b/src/pages/main_category_report/MainCategoryReport.module.scss
@@ -258,7 +258,7 @@
 .text_line {
   width: 100%;
   margin-top: 20px;
-  border-radius: 10%;
+  border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
 }
