--- a/src/components/master-signup/MasterCategory.module.scss
+++ b/src/components/master-signup/MasterCategory.module.scss
@@ -26,7 +26,10 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  flex-wrap: wrap;
+  @media (max-width: 890px) {
+    display: grid;
+    grid-template-columns: repeat(4, 0fr);
+  }
 }
 
 .box {
